# T25--4m_MLOps

./: .dockerignore  .dvcignore  .gitignore  .pre-commit-config.yaml  AIRFLOW_TUTORIAL.md  Dockerfile  Dockerfile.airflow  FRONTEND.md  LICENSE  MLOPS.pptx  Makefile  REACT_SETUP.md  README.md  README_DOCKER.md  __init__.py  agents.py  alert.rules.yml  app.py  core.py  defense_guide.md  defense_presentation.html  demo.py  docker-compose-airflow.yml  docker-compose-monitoring.yml  docker-compose.api.yaml  docker-compose.monitoring.yaml  docker-compose.yaml  docker-compose.yml  dvc.yaml  ensure_model_logged.py  environment.yml  final-project-topics-mlops.md  flight_pipeline.py  lab12_demo.py  main.py  metrics.txt  mlflow.db  model.pt  model_fold1.pt  params.yaml  (+12 more)
.dvc/: config
Airflow/: Dockerfile  docker-compose.yaml  requirements.txt
Core/: __init__.py  agents.py  core.py  demo.py  replay_logger.py  reward_system.py
Test_RL/: check_features.py  test_one_game.py  test_rl_agent.py  test_rl_vs_heuristic.py  test_rl_vs_random.py
airflow/: .env.example  Dockerfile  docker-compose.yaml  docker-compose.yml  install  requirements.txt
backend/: app.py  feature_labels.py  predict.py  rabbitmq.py  utils.py  worker.py
config/: airflow.cfg
dags/: drift_monitor_dag.py  flight_pipeline.py
data/: .gitignore  raw.dvc
doc/: 10л.txt  5л_проделанная_работа.txt  9л.txt  Классы и функции.docx  Настройка docker-контейнер.docx  л11.txt  л7_проделаннвя_работа.docx  л8.docx
env/: durak_env.py
feature_repo/: .gitignore  README.md  definitions.py  entities.py  example_repo.py  feature_store.yaml  feature_views.py  features.py  features_views.py  visualize_features.py
frontend/: README.md  index.html
frontend-build/: index.html
frontend-react/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
k8s/: deployment.yaml  deployment.yml  hpa.yaml  hpa.yml  ingress.yaml  load-test.yaml  service.yaml  service.yml
models/: .gitignore  TrainDelayPredictionm.keras  classification_metrics.json  classifier_model.joblib  feast_training_metrics.json  feature_info.json  feature_names.json  features_info.json  logisticregression_model.joblib  model.joblib  personality_model.joblib  personality_scaler.joblib  scaler.joblib
prometheus/: alert.rules.yml  prometheus.yml
replays/: replay_2025-09-25_13-18-35.json  replay_20250925_132811.json
reports/: .gitignore  api_test.json  drift_report.json  eval.html  eval.json  feast_integration_report.txt  samples.jsonl  train_summary_20251117_132806.json  train_summary_20251117_134439.json  train_summary_20251117_135523.json  train_summary_20251117_135534.json  train_summary_20251117_135543.json  train_summary_20251117_135552.json  train_summary_20251117_135604.json
scripts/: check_metrics.py  load_test.py  prepare_feast_features.py
src/: Api.py  __init__.py  alias.py  (+29 more)
(+759 files in other folders)
