[project]
name = "t25-4m-mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dvc>=3.63.0",
    "fastapi>=0.118.0",
    "hyperopt>=0.2.7",
    "joblib>=1.5.2",
    "matplotlib>=3.10.6",
    "mlflow>=3.4.0",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "pre-commit>=4.3.0",
    "prometheus-client>=0.23.1",
    "pytest>=8.4.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "shap>=0.48.0",
    "uvicorn>=0.37.0",
    "xgboost>=3.0.5",
]
